Added 2 more workspaces

--- a/Sencha.study/workspace005/.sencha/workspace/sencha.cfg
+++ b/Sencha.study/workspace005/.sencha/workspace/sencha.cfg
@@ -1,12 +1,8 @@
-1. Create a workspace
-sencha generate workspace workspace00X
-
-2. Config workspace
-#Tue, 30 Jun 2015 16:47:20 +0000
+#Wed, 01 Jul 2015 14:28:19 +0000
 # -----------------------------------------------------------------------------
 # This file contains configuration options that apply to all applications in
 # the workspace. By convention, these options start with "workspace." but any
-# option can be set here. Options specified in an application''s sencha.cfg will
+# option can be set here. Options specified in an application's sencha.cfg will
 # take priority over those values contained in this file. These options will
 # take priority over configuration values in Sencha Cmd or a framework plugin.
 
@@ -35,31 +31,3 @@ workspace.theme.dir=${workspace.packages.dir}/${args.themeName}
 # =============================================================================
 
 workspace.cmd.version=5.1.3.61
-
-
-ext.dir=${workspace.dir}/ext
-app.framework=ext
-
-
-3. Create a link to the sdk
-cd ${workspace.dir}
-ln -s ~/Sencha/ExtJS/extjs ext
-
-4. Generate App
-sencha -sdk /path/to/ext generate app ExtApp /path/to/workspace/extApp 
-sencha -sdk ./ext generate app ExtApp extApp
-
-5. Build App
-cd extApp
-sencha app build
-
-
-
-
-
-
-workspace001 : ext
-workspace002 : ext-4.2.1
-workspace003 : ext-5.0.1
-workspace004 : ext-5.1.0
-workspace005 : ext-5.1.1
